# clevis-pin-trustee

./: .gitignore  COPR.md  Cargo.toml  Containerfile  RELEASE.md  clevis-pin-trustee.spec  copr-build.sh  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: audit.yaml  container.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
