# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["cli", "lib"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/latchset/clevis-pin-trustee"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
