# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "clevis-pin-trustee"
version = "0.1.0"
description = "Clevis PIN for URL-based encryption/decryption"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
clevis-pin-trustee-lib = { path = "../lib" }
hex = "0.4.3"
josekit = "0.7.4"
rand = "0.9.2"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde.workspace = true
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9.11"

[dev-dependencies]
tempfile = "3.24"
